Refactoring into functional style

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,8 +1,21 @@
-redshift = {
-  url = "jdbc:redshift://examplecluster.canhfkm0rqdk.us-west-2.redshift.amazonaws.com:5439/dev"
-  user = "masteruser"
-  password = "Masterpassword1"
-  driver = com.amazon.redshift.jdbc.Driver
-  connectionPool = disabled
-  keepAliveConnection = true
+aws {
+  region = "us-west-2"
+  role-arn = "arn:aws:iam::582312427336:role/myRedshiftRole"
+
+  redshift {
+    url = "jdbc:redshift://examplecluster.canhfkm0rqdk.us-west-2.redshift.amazonaws.com:5439/dev"
+    user = "masteruser"
+    password = "Masterpassword1"
+  }
+}
+
+slick {
+  redshift {
+    url = ${aws.redshift.url}
+    user = ${aws.redshift.user}
+    password = ${aws.redshift.password}
+    driver = com.amazon.redshift.jdbc.Driver
+    connectionPool = disabled
+    keepAliveConnection = true
+  }
 }
